VZDEV/src/objects/CCPM_journeyMessage__c.object
<CustomObject>
    <description>Object for Campaigns</description>
    <fields>
        <fullName>CCPM_JourneyMessageName__c</fullName>
        <label>Journey Message Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_LeadSource__c</fullName>
        <description>text field to populate Lead Source Value</description>
        <label>Lead Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_calculateSMSFollowup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calculate SMS Followup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Journey Messages</relationshipLabel>
        <relationshipName>CCPM_journeyMessages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPM_customerMessage__c</fullName>
        <label>Customer Message</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_endDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CCPM_eventEndDate__c</fullName>
        <label>Event End Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_eventSMSFollowUpEndDate__c</fullName>
        <label>Event SMS Follow Up End Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_eventSMSFollowUpStartDate__c</fullName>
        <label>Event SMS Follow Up Start Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_eventStartDate__c</fullName>
        <label>Event Start Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_eventType__c</fullName>
        <label>Event Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPM_isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_isDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_messageFollowUpSMS__c</fullName>
        <label>MessageFollowupSMS</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_messageInitialSMS__c</fullName>
        <label>MessageInitialSMS</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_overrideEcode__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Ecode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPM_prospectMessage__c</fullName>
        <label>Prospect Message</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCPM_startDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <label>Journey Message</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CCPM_isActive__c</columns>
        <columns>NAME</columns>
        <columns>CCPM_JourneyMessageName__c</columns>
        <columns>CCPM_LeadSource__c</columns>
        <columns>CCPM_customerMessage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CCPM_eventMessage</fullName>
        <columns>NAME</columns>
        <columns>CCPM_JourneyMessageName__c</columns>
        <columns>CCPM_eventStartDate__c</columns>
        <columns>CCPM_eventEndDate__c</columns>
        <columns>CCPM_eventSMSFollowUpStartDate__c</columns>
        <columns>CCPM_eventSMSFollowUpEndDate__c</columns>
        <columns>CCPM_eventType__c</columns>
        <columns>CCPM_calculateSMSFollowup__c</columns>
        <columns>CCPM_isActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CCPM_journeyMessage__c.CCPM_EventMessage</value>
        </filters>
        <label>Event Message</label>
    </listViews>
    <listViews>
        <fullName>Campaign_Messages</fullName>
        <columns>NAME</columns>
        <columns>CCPM_JourneyMessageName__c</columns>
        <columns>CCPM_startDateTime__c</columns>
        <columns>CCPM_endDateTime__c</columns>
        <columns>CCPM_campaign__c</columns>
        <columns>CCPM_messageInitialSMS__c</columns>
        <columns>CCPM_messageFollowUpSMS__c</columns>
        <columns>CCPM_isActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CCPM_journeyMessage__c.CCPM_CampaignMessage</value>
        </filters>
        <label>Campaign Messages</label>
    </listViews>
    <nameField>
        <displayFormat>JM-{000000}</displayFormat>
        <label>Journey Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journey Messages</pluralLabel>
    <recordTypes>
        <fullName>CCPM_CampaignMessage</fullName>
        <active>true</active>
        <label>Campaign Message</label>
    </recordTypes>
    <recordTypes>
        <fullName>CCPM_EventMessage</fullName>
        <active>true</active>
        <label>Event Message</label>
    </recordTypes>
    <recordTypes>
        <fullName>CCPM_PreDefinedMessage</fullName>
        <active>true</active>
        <label>Pre Defined Message</label>
    </recordTypes>
    <recordTypes>
        <fullName>CCPM_RegularMessage</fullName>
        <active>true</active>
        <label>Regular Message</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>